@@ -12,6 +12,7 @@ LEGEND
   [+] Added ability to show tabs at the bottom of the tab windows
   [+] Added support of XEP-0199 - XMPP Ping
   [+] Added maintenance history of visited conferences
+  [+] Changes of contact status and entry/exit of participants in conference are stored in the history
   [*} Changed the format of the qoutes design
   [*] Server side archive preferences support is not longer required for retrieving messages history from server
   [*] Added ability to switch between tabs by shortkeys Alt+Number
